--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ kidney-disease-clf/
 src/kidney_disease_classifier.egg-info/
 logs_folder/system_logs.log
 src/kidney_disease_classifier/__pycache__/__init__.cpython-310.pyc
+data/
