--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,8 @@ data_ingestion:
   source_URL: https://drive.google.com/file/d/1glxtYEdwiAGZ7QA8igNP4CZOmZGlMdM0/view?usp=sharing
   local_data_file: data/images/data.zip
   unzip_dir: data/images
+
+prepare_base_model:
+  root_dir: data/prepare_base_model
+  base_model_path: data/prepare_base_model/vgg_base_model.h5
+  updated_model_path: data/prepare_base_model/vgg_updated_model.h5
