--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,4 +15,4 @@ prepare_base_model:
 
 training:
   root_dir: data/training
-  trained_model_path: data/training/model.h5
+  trained_model_path: data/training/final_model.h5
